[gd_scene load_steps=13 format=3 uid="uid://de6b15l3uot4n"]

[ext_resource type="Script" path="res://scripts/RoomSwitcherMenu.gd" id="1_81aqu"]
[ext_resource type="Theme" uid="uid://dtsmkdeo6gbj5" path="res://assets/gui_theme.tres" id="2_te886"]
[ext_resource type="Texture2D" uid="uid://cqt6w2wk3apb0" path="res://assets/img/Mail.png" id="3_tuc61"]
[ext_resource type="Texture2D" uid="uid://cjc18afkfqg42" path="res://assets/img/Woods.png" id="4_1w5x5"]

[sub_resource type="SystemFont" id="SystemFont_j8pjj"]

[sub_resource type="LabelSettings" id="LabelSettings_24njd"]
font = SubResource("SystemFont_j8pjj")
font_size = 78

[sub_resource type="LabelSettings" id="LabelSettings_fbmhk"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_ia6q8"]
font_size = 40

[sub_resource type="QuadMesh" id="QuadMesh_tjrwr"]
size = Vector2(2, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_17ibn"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bws1c"]
resource_local_to_scene = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_17ibn")

[sub_resource type="BoxShape3D" id="BoxShape3D_e51qs"]
size = Vector3(2, 1, 0.05)

[node name="RoomSwitcherMenu" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.31475, 1.28805, 0)
script = ExtResource("1_81aqu")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(1200, 600)
render_target_update_mode = 4

[node name="Control" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_te886")

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="SubViewport/Control/VBoxContainer"]
layout_mode = 2
text = "Select room to switch to"
label_settings = SubResource("LabelSettings_24njd")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MailPanel" type="VBoxContainer" parent="SubViewport/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MailIcon" type="TextureButton" parent="SubViewport/Control/VBoxContainer/HBoxContainer/MailPanel"]
layout_mode = 2
texture_normal = ExtResource("3_tuc61")

[node name="MailLabel" type="Label" parent="SubViewport/Control/VBoxContainer/HBoxContainer/MailPanel"]
layout_mode = 2
text = "Mail"
label_settings = SubResource("LabelSettings_fbmhk")
horizontal_alignment = 1

[node name="AdventurePanel" type="VBoxContainer" parent="SubViewport/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AdventureIcon" type="TextureButton" parent="SubViewport/Control/VBoxContainer/HBoxContainer/AdventurePanel"]
layout_mode = 2
texture_normal = ExtResource("4_1w5x5")

[node name="AdventureLabel" type="Label" parent="SubViewport/Control/VBoxContainer/HBoxContainer/AdventurePanel"]
layout_mode = 2
text = "Adventure
"
label_settings = SubResource("LabelSettings_ia6q8")
horizontal_alignment = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_tjrwr")
surface_material_override/0 = SubResource("StandardMaterial3D_bws1c")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 9437184
collision_mask = 8388608

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_e51qs")
